fix Netlify config, update footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,9 +15,9 @@
           <a href="https://twitter.com/techmilldenton" title="TechMill on Twitter">@techmilldenton</a><br>
           <br>
           <address>
-            <strong>UNT Inspire Park</strong><br>
-            6170 Research Rd<br>
-            Frisco, TX 75033
+            <strong>{{ site.data.event.venue.name }}</strong><br>
+            {{ site.data.event.venue.street }}<br>
+            {{ site.data.event.venue.city }}, {{ site.data.event.venue.state }} {{ site.data.event.venue.zip }}
           </address>
         </p>
       </div>
@@ -48,7 +48,7 @@
             <li><a href="/conduct">Code of Conduct</a></li>
           </ul>
         </nav>
-        <div class="copyright float-right">&copy;2018 TechMill Denton</div>
+        <div class="copyright float-right">&copy;2019 TechMill Denton</div>
       </div>
     </div>
   </div>
