--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
   <nav class="navbar navbar-transparent navbar-color-on-scroll fixed-top navbar-expand-lg" color-on-scroll="100" id="sectionsNav">
     <div class="container">
       <div class="navbar-translate">
-        <a class="navbar-brand" href="/"><img src="/assets/img/hackntx.png" alt="Hack NTX" class="img-fluid"> {{ site.title }}</a>
+        <a class="navbar-brand" href="/"><img src="/assets/img/odd.png" alt="{{ site.title }}" class="img-fluid"> {{ site.title }}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           <span class="navbar-toggler-icon"></span>
