--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,9 +24,9 @@
 	<link rel="icon" type="image/png" sizes="32x32" href="{{ "/favicons/favicon-32x32.png" | prepend: site.baseurl }}">
 	<link rel="icon" type="image/png" sizes="16x16" href="{{ "/favicons/favicon-16x16.png" | prepend: site.baseurl }}">
 	<link rel="manifest" href="{{ "/favicons/site.webmanifest" | prepend: site.baseurl }}">
-	<link rel="mask-icon" href="{{ "/favicons/safari-pinned-tab.svg" | prepend: site.baseurl }}" color="#595959">
+	<link rel="mask-icon" href="{{ "/favicons/safari-pinned-tab.svg" | prepend: site.baseurl }}" color="#5bbad5">
 	<link rel="shortcut icon" href="{{ "/favicons/favicon.ico" | prepend: site.baseurl }}">
-	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="msapplication-TileColor" content="#603cba">
 	<meta name="msapplication-config" content="{{ "/favicons/browserconfig.xml" | prepend: site.baseurl }}">
 	<meta name="theme-color" content="#ffffff">
 
