--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3 text-center">
-        <img src="/assets/img/hackntx.png" alt="Hack NTX" class="img-fluid">
+        <img src="/assets/img/odd.png" alt="DFW Open Data Day" class="img-fluid">
       </div>
       <div class="col-md-3">
         <h4>About TechMill</h4>
@@ -16,8 +16,8 @@
           <br>
           <address>
             <strong>{{ site.data.event.venue.name }}</strong><br>
-            {{ site.data.event.venue.street }}<br>
-            {{ site.data.event.venue.city }}, {{ site.data.event.venue.state }} {{ site.data.event.venue.zip }}
+            {{ site.data.event.venue.address.street }}<br>
+            {{ site.data.event.venue.address.city }}, {{ site.data.event.venue.address.state }} {{ site.data.event.venue.address.zip }}
           </address>
         </p>
       </div>
