--- a/_includes/jsonld.html
+++ b/_includes/jsonld.html
@@ -1,3 +1,6 @@
+---
+# for variable processing
+---
 <!-- Google Structured Data -->
 <script type='application/ld+json'>
 {
@@ -6,30 +9,20 @@
   "name": "{{ site.title }}",
   "url": "{{ site.url }}",
   "description": "{{ site.description }}",
-  "startDate": "2018-11-30T18:30",
-  "endDate": "2018-12-01T20:00",
+  "startDate": "2019-03-02T18:30",
+  "endDate": "2019-03-02T20:00",
   "location": {
     "@type": "Place",
-    "name": "UNT Inspire Park",
-    "sameAs": "https://frisco.unt.edu/location/inspire-park",
+    "name": "{{ site.data.event.venue.name }}",
+    "sameAs": "{{ site.data.event.venue.url }}",
     "address": {
       "@type": "PostalAddress",
-      "streetAddress": "6170 Research Rd",
-      "addressLocality": "Frisco",
-      "addressRegion": "Texas",
-      "postalCode": "75033",
+      "streetAddress": "{{ site.data.event.venue.address.street }}",
+      "addressLocality": "{{ site.data.event.venue.address.city }}",
+      "addressRegion": "{{ site.data.event.venue.address.state }}",
+      "postalCode": "{{ site.data.event.venue.address.zip }}",
       "addressCountry": "USA"
     }
-  },
-  "offers": {
-    "@type": "Offer",
-    "description": "Participant",
-    "url": "https://localhackday.mlh.io/lhd-2018/events/909-techmill-inc",
-    "price": "0.00",
-    "priceCurrency": "USD",
-    "availability": "http://schema.org/InStock",
-    "validFrom": "09/10/2018"
-    "image": "/assets/img/social/twitter-In-Stream_Wide___hackntx-social.jpg",
   }
 }
  </script>
