Update Texas logo in few places

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3 text-center">
-        <img src="/assets/img/odd.png" alt="DFW Open Data Day" class="img-fluid">
+        <img src="/assets/img/odd-texas.png" alt="DFW Open Data Day" class="img-fluid">
       </div>
       <div class="col-md-3">
         <h4>About TechMill</h4>
