--- a/_includes/alert.html
+++ b/_includes/alert.html
@@ -6,6 +6,6 @@
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true"><i class="material-icons">clear</i></span>
     </button>
-    <strong>Update:</strong> HackNTX is now a one-day event, Saturday, December 1st. Read more about it on our <a href="/blog/2018/11/26/one-day-only-a-story-of-logistics"><strong>blog</strong></a>!
+    <strong>Update:</strong> DFW Open Data Day is now a one-day event, Saturday, March 2nd.</a>!
   </div>
 </div>
