--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,8 @@
 
 	<!-- Jekyll Metadata -->
 	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+	<!-- Missing OG from Jekyll SEO -->
+	<meta property="og:type" content="website" />
 
 	{% if page.layout == 'home' %}
 		{% include jsonld.html %}
