--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -13,3 +13,10 @@
 <script src="{{ "/assets/js/custom.js" | prepend: site.baseurl }}"></script>
 <!-- Addthis -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid={{ site.addthis }}"></script>
+
+{% if site.google_tag_manager %}
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ site.google_tag_manager }}"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+{% endif %}
